Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
11.5(EOL)
-
None
Description
--source include/have_innodb.inc
|
CREATE TABLE t1 (i INT) ENGINE=InnoDB; |
CREATE TABLE t2 (i INT) ENGINE=InnoDB; |
CREATE TEMPORARY TABLE t3 (i INT); |
REPAIR TABLE t1,t2,t3; |
In preview-11.5-preview:
preview-11.5-preview 8f0c9340537b84fcd7012d4a31e6f858e7eb919c |
mariadbd: /test/preview-11.5-preview_dbg/sql/temporary_tables.cc:333: bool THD::open_temporary_table(TABLE_LIST*): Assertion `tl->table == __null' failed.
|
preview-11.5-preview 8f0c9340537b84fcd7012d4a31e6f858e7eb919c |
Core was generated by `/test/preview-11.5-preview_MD020424-mariadb-11.5.0-linux-x86_64-dbg/bin/mariadb'.
|
Program terminated with signal SIGABRT, Aborted.
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
[Current thread is 1 (LWP 3398163)]
|
(gdb) bt
|
#0 __pthread_kill_implementation (no_tid=0, signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:44
|
#1 __pthread_kill_internal (signo=6, threadid=<optimized out>)at ./nptl/pthread_kill.c:78
|
#2 __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=6)at ./nptl/pthread_kill.c:89
|
#3 0x000015214763c406 in __GI_raise (sig=sig@entry=6)at ../sysdeps/posix/raise.c:26
|
#4 0x000015214762287c in __GI_abort () at ./stdlib/abort.c:79
|
#5 0x000015214762279b in __assert_fail_base (fmt=0x1521477b9f68 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=assertion@entry=0x562e74584b12 "tl->table == __null", file=file@entry=0x562e745845d8 "/test/preview-11.5-preview_dbg/sql/temporary_tables.cc", line=line@entry=333, function=function@entry=0x562e74584a08 "bool THD::open_temporary_table(TABLE_LIST*)") at ./assert/assert.c:92
|
#6 0x0000152147633b86 in __assert_fail (assertion=0x562e74584b12 "tl->table == __null", file=0x562e745845d8 "/test/preview-11.5-preview_dbg/sql/temporary_tables.cc", line=333, function=0x562e74584a08 "bool THD::open_temporary_table(TABLE_LIST*)")at ./assert/assert.c:101
|
#7 0x0000562e73b73e32 in THD::open_temporary_table (this=this@entry=0x152110000d58, tl=tl@entry=0x152110017960)at /test/preview-11.5-preview_dbg/sql/temporary_tables.cc:333
|
#8 0x0000562e73b74212 in THD::open_temporary_tables (this=this@entry=0x152110000d58, tl=tl@entry=0x152110017210)at /test/preview-11.5-preview_dbg/sql/temporary_tables.cc:476
|
#9 0x0000562e73a80a97 in admin_recreate_table (thd=thd@entry=0x152110000d58, table_list=table_list@entry=0x152110017210, recreate_info=recreate_info@entry=0x1521335a93a0, table_copy=table_copy@entry=true)at /test/preview-11.5-preview_dbg/sql/sql_admin.cc:72
|
#10 0x0000562e73a837b4 in mysql_admin_table (thd=thd@entry=0x152110000d58, tables=tables@entry=0x152110016ac0, check_opt=check_opt@entry=0x152110006568, operator_name=operator_name@entry=0x562e74d39250 <msg_repair>, lock_type=lock_type@entry=TL_WRITE, org_open_for_modify=org_open_for_modify@entry=true, no_errors_from_open=<optimized out>, extra_open_options=<optimized out>, prepare_func=<optimized out>, operator_func=<optimized out>, view_operator_func=<optimized out>, is_cmd_replicated=<optimized out>)at /test/preview-11.5-preview_dbg/sql/sql_admin.cc:1116
|
#11 0x0000562e73a857b5 in Sql_cmd_repair_table::execute (this=<optimized out>, thd=0x152110000d58) at /test/preview-11.5-preview_dbg/sql/sql_admin.cc:1693
|
#12 0x0000562e738fc887 in mysql_execute_command (thd=thd@entry=0x152110000d58, is_called_from_prepared_stmt=is_called_from_prepared_stmt@entry=false)at /test/preview-11.5-preview_dbg/sql/sql_parse.cc:5809
|
#13 0x0000562e738fdbd7 in mysql_parse (thd=thd@entry=0x152110000d58, rawbuf=<optimized out>, length=<optimized out>, parser_state=parser_state@entry=0x1521335aa230)at /test/preview-11.5-preview_dbg/sql/sql_parse.cc:7821
|
#14 0x0000562e739000a1 in dispatch_command (command=command@entry=COM_QUERY, thd=thd@entry=0x152110000d58, packet=packet@entry=0x152110119fe9 "", packet_length=packet_length@entry=21, blocking=blocking@entry=true)at /test/preview-11.5-preview_dbg/sql/sql_class.h:254
|
#15 0x0000562e739023b8 in do_command (thd=0x152110000d58, blocking=blocking@entry=true)at /test/preview-11.5-preview_dbg/sql/sql_parse.cc:1405
|
#16 0x0000562e73a7072b in do_handle_one_connection (connect=<optimized out>, connect@entry=0x562e774264e8, put_in_cache=put_in_cache@entry=true)at /test/preview-11.5-preview_dbg/sql/sql_connect.cc:1447
|
#17 0x0000562e73a70a2a in handle_one_connection (arg=arg@entry=0x562e774264e8)at /test/preview-11.5-preview_dbg/sql/sql_connect.cc:1349
|
#18 0x0000562e73ebae72 in pfs_spawn_thread (arg=0x562e773a7868)at /test/preview-11.5-preview_dbg/storage/perfschema/pfs.cc:2201
|
#19 0x000015214768f18a in start_thread (arg=<optimized out>)at ./nptl/pthread_create.c:444
|
#20 0x000015214771dbd0 in clone3 ()at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
|
Attachments
Issue Links
- is caused by
-
MDEV-33449 improving repair of tables
-
- Closed
-
- relates to
-
MDEV-23207 Assertion `tl->table == __null' failed in THD::open_temporary_table
-
- Closed
-