squash! 137d2c6fa298f04066a87dda160aac8dbee94e61

MDEV-33826 Assertion `tl->table == __null' failed in
THD::open_temporary_table

The bug was that admin_recreate_table() did not expect that there where
many tables in able_list,